--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -26,9 +26,13 @@
             <td>@restaurant.Location</td>
             <td>@restaurant.Cuisine</td>
             <td>
-                <a class="btn btn-lg" 
+                <a class="btn btn-lg"
                    asp-page="./Detail" asp-route-restaurantId="@restaurant.Id">
                     <i class="glyphicon glyphicon-zoom-in"></i>
+                </a>
+                <a class="btn btn-lg"
+                   asp-page="./Edit" asp-route-restaurantId="@restaurant.Id">
+                    <i class="glyphicon glyphicon-edit"></i>
                 </a>
             </td>
         </tr>
