confirming the last operation

--- a/OdeToFood/Pages/Restaurants/Detail.cshtml
+++ b/OdeToFood/Pages/Restaurants/Detail.cshtml
@@ -14,3 +14,8 @@
 <div>
     Cuisine: @Model.Restaurant.Cuisine
 </div>
+
+@if (Model.Message != null)
+{
+    <div class="alert alert-info">@Model.Message</div>
+}
