modifying the service registration

--- a/OdeToFood/Pages/Restaurants/Detail.cshtml
+++ b/OdeToFood/Pages/Restaurants/Detail.cshtml
@@ -19,3 +19,7 @@
 {
     <div class="alert alert-info">@Model.Message</div>
 }
+
+<br/>
+<h2>Your restaurant was not found</h2>
+<a asp-page="./List" class="btn btn-primary">See All Restaurants</a>
