implementing the delete markup

--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -34,6 +34,10 @@
                    asp-page="./Edit" asp-route-restaurantId="@restaurant.Id">
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
+                <a class="btn btn-lg"
+                   asp-page="./Delete" asp-route-restaurantId="@restaurant.Id">
+                    <i class="glyphicon glyphicon-trash"></i>
+                </a>
             </td>
         </tr>
     }
