--- a/OdeToFood/Pages/Shared/_Layout.cshtml
+++ b/OdeToFood/Pages/Shared/_Layout.cshtml
@@ -45,9 +45,8 @@
         @RenderBody()
         <hr />
         <footer>
-            <vc:restaurant-count></vc:restaurant-count>
-            @RenderSection("footer", required: false)
             <p>&copy; 2020 - OdeToFood</p>
+            <img src="/OdeToFood.png"/>
         </footer>
     </div>
 
