managing production scripts and development scripts

--- a/OdeToFood/Pages/Restaurants/ClientRestaurants.cshtml
+++ b/OdeToFood/Pages/Restaurants/ClientRestaurants.cshtml
@@ -8,6 +8,9 @@
 @section Scripts
 {
     <environment include="Development">
+        <script src="D:\GitHub\OdeToFood\OdeToFood\node_modules\datatables.net\js\jquery.dataTables.js"></script>
+        <script src="D:\GitHub\OdeToFood\OdeToFood\node_modules\datatables.net-bs\js\dataTables.bootstrap.js"></script>
+        <link href="D:\GitHub\OdeToFood\OdeToFood\node_modules\datatables.net-bs\css\dataTables.bootstrap.css" rel="stylesheet" />
     </environment>
 
     <environment exclude="Development">
