--- a/OdeToFood/Pages/Restaurants/ClientRestaurants.cshtml
+++ b/OdeToFood/Pages/Restaurants/ClientRestaurants.cshtml
@@ -5,6 +5,8 @@
 
 <h2>Client Restaurants</h2>
 
+<table class="table" id="restaurants"></table>
+
 @section Scripts
 {
     <environment include="Development">
@@ -20,10 +22,25 @@
 
     <script>
         $(function () {
+
+            var cuisines = ["Unknown", "Mexican", "Italian", "Indian"];
+
             $.ajax("/api/restaurants/",
                 { method: "get" })
                 .then(function (response) {
-                    console.dir(response);
+                    $("#restaurants").dataTable({
+                        data: response,
+                        columns: [
+                            { "data": "name" },
+                            { "data": "location" },
+                            {
+                                "data": "cuisine", "render": function(data) {
+                                    return cuisines[data];
+                                }
+                                
+                            }
+                        ]
+                    });
                 });
         })
     </script>
